# AssettoCorsaRL

./: .gitignore  CLI_DECORATOR_GUIDE.md  PUBLISHING.md  README.md  RLHF_sac.py  config.py  env.py  env_test_torchrl.py  load_sac.py  noisy.py  requirements.txt  sac.py  simulate.py  test.py  torchrl_ppo.py  train.py  train_core.py  train_sac.py  train_utils.py
assetto-corsa-rl/: LICENSE  MANIFEST.in  pyproject.toml  requirements.txt  setup.cfg  setup.py  uninstall.txt
assetto-corsa-rl/configs/: env_config.yaml  model_config.yaml  train_config.yaml
assetto-corsa-rl/configs/ac/: env_config.yaml  model_config.yaml  train_config.yaml
assetto-corsa-rl/scripts/: load.py  load_vae.py  run_train.sh  train.py  train_vae.py
assetto-corsa-rl/scripts/ac/: load_ac.py  load_vae.py  pretrain_bc.py  record_demonstrations.py  record_racing_line.py  save_image_dataset.py  train_ac.py  train_vae.py  vis_image_dataset.py
assetto-corsa-rl/scripts/car-racing/: load.py  load_vae.py  train_car_racing.py  train_vae.py
assetto-corsa-rl/src/assetto_corsa_rl/: __init__.py  ac_env.py  ac_send_actions.py  ac_telemetry_helper.py  cli.py  cli_registry.py  env.py  env_helper.py  load.py  simulate.py
assetto-corsa-rl/src/assetto_corsa_rl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
assetto-corsa-rl/src/assetto_corsa_rl/model/: noisy.py  sac.py  vae.py
assetto-corsa-rl/src/assetto_corsa_rl/scripts/: __init__.py
assetto-corsa-rl/src/assetto_corsa_rl/train/: __init__.py  collector.py  learner.py  logging_utils.py  (+3 more)
assetto-corsa-rl/tests/: test_ac_env.py  test_ac_reward.py  test_env.py
(+28 files in other folders)
