[metadata]
name = assetto-corsa-rl
version = 0.1.6
description = Reinforcement Learning toolkit for Assetto Corsa and Car Racing environments
long_description = file: README.md
long_description_content_type = text/markdown
author = Assetto Corsa RL Contributors
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Games/Entertainment :: Simulation

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.9
include_package_data = True

# Dependencies are declared in `pyproject.toml` (single source of truth).
# Keep `requirements.txt` in sync with `pyproject.toml` for developer convenience.

[options.packages.find]
where = src

[options.package_data]
* = *.yaml, *.json

[options.entry_points]
console_scripts =
    acrl = assetto_corsa_rl.cli:main

[options.extras_require]
dev =
    pytest>=7.4.0
    pytest-cov>=4.1.0
    black>=23.7.0
    isort>=5.12.0
    flake8>=6.1.0
    mypy>=1.5.0
